@@ -15,10 +15,26 @@
 #define EN_ADVERTISED_ROUTE_SYNC_H 1
 
 #include "lib/inc-proc-eng.h"
+#include "lib/uuidset.h"
 
-struct advertised_route_sync_data {
+struct advertised_route_sync_tracked_data {
+  /* Contains the uuids of all NB Logical Routers where we used a
+   * lr_stateful_record during computation. */
+  struct uuidset nb_lr_stateful;
+  /* Contains the uuids of all NB Logical Switches where we rely on port
+   * port changes for host routes. */
+  struct uuidset nb_ls;
 };
 
+struct advertised_route_sync_data {
+    /* Node's tracked data. */
+    struct advertised_route_sync_tracked_data trk_data;
+};
+
+bool advertised_route_sync_lr_stateful_change_handler(struct engine_node *node,
+                                                      void *data);
+bool advertised_route_sync_northd_change_handler(struct engine_node *node,
+                                       void *data);
 void *en_advertised_route_sync_init(struct engine_node *, struct engine_arg *);
 void en_advertised_route_sync_cleanup(void *data);
 void en_advertised_route_sync_run(struct engine_node *, void *data);
