@@ -25,6 +25,7 @@
 #include "openvswitch/hmap.h"
 #include "simap.h"
 #include "ovs-thread.h"
+#include "en-lr-stateful.h"
 
 struct northd_input {
     /* Northbound table references */
@@ -183,10 +184,6 @@ struct routes_data {
     struct hmap parsed_routes;
     struct simap route_tables;
     struct hmap bfd_active_connections;
-};
-
-struct routes_sync_data {
-    struct hmap parsed_routes;
 };
 
 struct route_policies_data {
@@ -937,5 +934,25 @@ ovn_port_find_bound(const struct hmap *ports, const char *name)
 {
     return ovn_port_find__(ports, name, true);
 }
+
+/* Structure representing logical router port
+ * routable addresses. This includes DNAT and Load Balancer
+ * addresses. This structure will only be filled in if the
+ * router port is a gateway router port. Otherwise, all pointers
+ * will be NULL and n_addrs will be 0.
+ */
+struct ovn_port_routable_addresses {
+    /* The parsed routable addresses */
+    struct lport_addresses *laddrs;
+    /* Number of items in the laddrs array */
+    size_t n_addrs;
+};
+
+struct ovn_port_routable_addresses get_op_addresses(
+    struct ovn_port *op,
+    const struct lr_stateful_record *lr_stateful_rec,
+    bool routable_only);
+
+void destroy_routable_addresses(struct ovn_port_routable_addresses *ra);
 
 #endif /* NORTHD_H */
